--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
     "react-rating-stars-component": "^2.2.0",
