--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
     "@ramonak/react-progress-bar": "^5.3.0",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "copy-to-clipboard": "^3.3.3",
+    "heroicons": "^2.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
