--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^4.1.0",
     "heroicons": "^2.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
